<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="com.acme.calculator.view.CalculatorActivity">

    <LinearLayout
        android:id="@+id/winnerPlayerViewGroup"
        android:layout_width="142dp"
        android:layout_height="203dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/winnerPlayerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="40sp"
            tools:text="X" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner"
            android:textSize="30sp" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:tag="cButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/cButton"
            />

        <Button
            android:tag="plusMinusButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/plusMinusButton"
            />

        <Button
            android:tag="backSlashButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/backSlashButton"
            />

        <Button
            android:tag="divisionButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/divisionButton"
            />

        <Button
            android:tag="07"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/sevenButton"
            />

        <Button
            android:tag="08"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/eightButton"
            />

        <Button
            android:tag="09"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/nineButton"
            />

        <Button
            android:tag="multiplication"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/multiplicationButton"
            />

        <Button
            android:tag="04"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/fourButton"
            />
        <Button
            android:tag="05"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/fiveButton"
            />
        <Button
        android:tag="06"
        android:onClick="onCellClicked"
        style="@style/calculatorbutton"
            android:text = "@string/sixButton"
        />

        <Button
            android:tag="minus"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/minusButton"
            />
        <Button
            android:tag="01"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/oneButton"
            />
        <Button
            android:tag="02"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/twoButton"
            />
        <Button
            android:tag="03"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/threeButton"
            />
        <Button
            android:tag="addition"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/additionButton"
            />
        <Button
            android:tag="00"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/zeroButton"
            />
        <Button
            android:tag="decimalButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/decimalButton"
            />
        <Button
            android:tag="equalButton"
            android:onClick="onCellClicked"
            style="@style/calculatorbutton"
            android:text = "@string/equalButton"
            />



    </GridLayout>



</LinearLayout>
